# cdyn

./: CMakeLists.txt  LICENSE  README.md
cmake/: cdyn-config.cmake
src/: CMakeLists.txt  dynamics.c  dynamics.h  integrate.c  integrate.h  observations.c  observations.h  simulate.c  simulate.h
test/: CMakeLists.txt
test/dyn_test/: CMakeLists.txt  dyn_test.c
test/int_test/: CMakeLists.txt  integrate_test.c
test/obs_test/: CMakeLists.txt  obs_test.c
test/traj_test/: CMakeLists.txt  traj_test.c
